[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/extends_toolmode/gt_tool_speaker.gd" type="Script" id=1]
[ext_resource path="res://addons/graphtastic/resources/style_themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/extends_toolmode/gt_tool_singleton.gd" type="Script" id=3]
[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/toolmode_dialog_player.gd" type="Script" id=5]
[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/extends_toolmode/gt_tool_choices.gd" type="Script" id=6]
[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/extends_toolmode/gt_tool_textbox.gd" type="Script" id=7]
[ext_resource path="res://addons/graphtastic/dialog_player/toolmode/extends_toolmode/gt_tool_pictures.gd" type="Script" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleton" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectCENTER" type="TextureRect" parent="Singleton"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
singleton = NodePath("..")

[node name="VBoxContainer" type="VBoxContainer" parent="Singleton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Singleton/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="Singleton/VBoxContainer"]
margin_top = 37.0
margin_right = 1004.0
margin_bottom = 409.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 65

[node name="VBoxContainer2" type="VBoxContainer" parent="Singleton/VBoxContainer/HBoxContainer"]
margin_right = 287.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectLEFT" type="TextureRect" parent="Singleton/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 287.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7
script = ExtResource( 8 )
identifier = 0
singleton = NodePath("../../../..")

[node name="RichTextLabel" type="RichTextLabel" parent="Singleton/VBoxContainer/HBoxContainer/VBoxContainer2/TextureRectLEFT"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
size_flags_horizontal = 3
bbcode_enabled = true
meta_underlined = false
fit_content_height = true
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
speaker_persistent = false
singleton = NodePath("../../../../..")

[node name="Control" type="Control" parent="Singleton/VBoxContainer/HBoxContainer"]
margin_left = 352.0
margin_right = 639.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRectRIGHT" type="TextureRect" parent="Singleton/VBoxContainer/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
identifier = 2
singleton = NodePath("../../../..")

[node name="VBoxContainer" type="VBoxContainer" parent="Singleton/VBoxContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 1004.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Singleton/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 348.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Singleton/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 300.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
script = ExtResource( 6 )
singleton = NodePath("../../../../..")

[node name="Control" type="Control" parent="Singleton/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 300.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="Singleton/VBoxContainer"]
margin_top = 409.0
margin_right = 1004.0
margin_bottom = 595.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "asdfasdf
paul"
text = "asdfasdf
paul"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
resource_path = null
textspeed = 6.0
singleton = NodePath("../..")

[connection signal="GT_dialog_finished" from="Singleton" to="." method="_on_Singleton_GT_dialog_finished"]
